# curse_Project

./: .gitignore  CMakeLists.txt  EXCEPTIONS_USAGE.md  NutritionDiary.pro  README.md  README_UML.md  UML_README.md  code_listing.docx  create_docx.py  deploy.sh  products.txt  sonar-project.properties
data/: PRODUCTS_FORMAT.txt  README.md  products.txt
headers/: food.h  food_file_manager.h  history_manager.h  mainwindow.h  manager.h  meal_tracker.h  menuwindow.h  nutrition_advisor.h  nutrition_exceptions.h  nutrition_manager.h  recommendations.h  registrationwindow.h  summarywindow.h  trackingwindow.h  trend_analyzer.h  user.h
sources/: food.cpp  food_file_manager.cpp  history_manager.cpp  main.cpp  mainwindow.cpp  manager.cpp  meal_tracker.cpp  menuwindow.cpp  nutrition_advisor.cpp  nutrition_exceptions.cpp  nutrition_manager.cpp  recommendations.cpp  registrationwindow.cpp  summarywindow.cpp  trackingwindow.cpp  trend_analyzer.cpp  user.cpp
txt/: products.txt
